# SAPI4

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build_enhanced.bat  sapi4.cpp  sapi4.hpp  sapi4limits.cpp  sapi4out.cpp
SAPI4_web/: dub.json
SAPI4_web/public/: style.css
SAPI4_web/public/scripts/: tts.js
SAPI4_web/source/: app.d
SAPI4_web/views/: index.dt  layout.dt
android_app/: README.md  build_advanced.bat  build_windows.bat  settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/example/sapi4android/: HistoryAdapter.kt  MainActivity.kt  SAPI4Application.kt  TTSHistoryItem.kt  TTSManager.kt
android_app/app/src/main/res/drawable/: ic_launcher_foreground.xml  ios_style_progress.xml  ios_thumb.xml  rounded_button.xml  rounded_edittext.xml  rounded_spinner.xml  splash_screen.xml
android_app/app/src/main/res/layout/: activity_main.xml  item_history.xml
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/main/res/values-night/: themes.xml
android_app/app/src/main/res/xml/: data_extraction_rules.xml
android_app/gradle/wrapper/: gradle-wrapper.properties
